pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
spec:
  containers:
    - name: app-backend
      image: ghcr.io/johnsungnycu/hw3-backend  # 需改成自己的 Image
      ports:
        - containerPort: 8888
    - name: app-frontend
      image: ghcr.io/johnsungnycu/hw3-backend  # 需改成自己的 Image
      ports:
        - containerPort: 5173
    - name: db
      image: mongo
      ports:
        - containerPort: 27017
