svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-clusterip
spec:
  type: ClusterIP
  selector:
    app: app-backend
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
