svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-clusterip
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
